Add "scroll to top" button functionality with styles and JavaScript implementation

--- a/index.html
+++ b/index.html
@@ -253,6 +253,11 @@
         </div>
     </footer>
 
+    <!-- トップに戻るボタン -->
+    <button id="scrollToTop" class="scroll-to-top">
+        <span>↑</span>
+    </button>
+
     <script src="script.js"></script>
 </body>
 </html>
